[gd_scene load_steps=17 format=3 uid="uid://dbigh2spk2ws7"]

[ext_resource type="Script" uid="uid://bvfq3gw2wrc2a" path="res://scripts/character.gd" id="1_4hamb"]
[ext_resource type="Texture2D" uid="uid://dr5julgqsjxxh" path="res://assets/characters/bicho.png" id="2_6nu3q"]
[ext_resource type="Texture2D" uid="uid://06ah05lt6nyg" path="res://assets/formas geom√©tricas/circulo.png" id="3_xg3ad"]
[ext_resource type="PackedScene" uid="uid://d1bx3f0oguxhu" path="res://scenes/weapon.tscn" id="4_trwtq"]
[ext_resource type="Texture2D" uid="uid://dpxav81qxc47h" path="res://assets/fx/explosion.png" id="5_ycn1w"]
[ext_resource type="Gradient" uid="uid://cydj0hwyh8shl" path="res://assets/fx/new_gradient.tres" id="6_xgr1k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qsf3"]
size = Vector2(51.4286, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u2w4"]
size = Vector2(54.2857, 72.8572)

[sub_resource type="Animation" id="Animation_7b6wk"]
length = 0.001

[sub_resource type="Animation" id="Animation_f1uyg"]
resource_name = "Shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 17.5), Vector2(0, 15.5), Vector2(0, 17.5)]
}

[sub_resource type="Animation" id="Animation_tfrw1"]
resource_name = "Walk"
length = 0.2
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightFoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(13.75, 38.75), Vector2(23.75, 38.75), Vector2(13.75, 38.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftFoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-15, 38.75), Vector2(-25, 38.75), Vector2(-15, 38.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kx566"]
_data = {
&"RESET": SubResource("Animation_7b6wk"),
&"Shoot": SubResource("Animation_f1uyg"),
&"Walk": SubResource("Animation_tfrw1")
}

[sub_resource type="Animation" id="Animation_63dlq"]
resource_name = "DamageAnim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightFoot:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1), Color(0.843137, 0.843137, 0.847059, 0), Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftFoot:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1), Color(0.843137, 0.843137, 0.847059, 0), Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4eubf"]
resource_name = "DieAnim"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightFoot:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1), Color(0.843137, 0.843137, 0.847059, 0), Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftFoot:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1), Color(0.843137, 0.843137, 0.847059, 0), Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DieEffect:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uhou1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightFoot:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftFoot:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0.843137, 0.847059, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DieEffect:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8aurm"]
_data = {
&"DamageAnim": SubResource("Animation_63dlq"),
&"DieAnim": SubResource("Animation_4eubf"),
&"RESET": SubResource("Animation_uhou1")
}

[node name="Character" type="CharacterBody2D"]
z_index = 5
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 833
platform_floor_layers = 0
script = ExtResource("1_4hamb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.87329e-06, 7.85714)
shape = SubResource("RectangleShape2D_3qsf3")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8764

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1.36239e-06, 7.85714)
shape = SubResource("RectangleShape2D_6u2w4")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(0, -2.38419e-07)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_6nu3q")

[node name="RightFoot" type="Sprite2D" parent="."]
self_modulate = Color(0.843137, 0.843137, 0.847059, 1)
y_sort_enabled = true
position = Vector2(13.75, 38.75)
scale = Vector2(0.364688, 0.178183)
texture = ExtResource("3_xg3ad")

[node name="LeftFoot" type="Sprite2D" parent="."]
self_modulate = Color(0.843137, 0.843137, 0.847059, 1)
y_sort_enabled = true
position = Vector2(-15, 38.75)
scale = Vector2(0.364687, 0.178183)
texture = ExtResource("3_xg3ad")

[node name="Weapon" parent="." instance=ExtResource("4_trwtq")]
position = Vector2(0, 18.5)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
limit_left = 0
limit_top = -1
limit_right = 1568
limit_bottom = 576
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.3
drag_top_margin = 0.3
drag_right_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="DieEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
texture = ExtResource("5_ycn1w")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 0.1
scale_amount_max = 0.5
color_ramp = ExtResource("6_xgr1k")

[node name="WalkAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kx566")
}

[node name="ShootAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kx566")
}

[node name="DamageAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8aurm")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
